Persist GitHub event metadata